[gd_scene load_steps=69 format=2]

[ext_resource path="res://play Button.png" type="Texture" id=1]
[ext_resource path="res://space.png" type="Texture" id=2]
[ext_resource path="res://MainScene.tres" type="Environment" id=3]
[ext_resource path="res://play Button2.png" type="Texture" id=4]
[ext_resource path="res://Button.gd" type="Script" id=5]
[ext_resource path="res://ButtonQuit.gd" type="Script" id=6]
[ext_resource path="res://quitbutton.png" type="Texture" id=7]
[ext_resource path="res://quitbutton2.png" type="Texture" id=8]
[ext_resource path="res://stillPlayer.gd" type="Script" id=9]
[ext_resource path="res://ufo8.png" type="Texture" id=10]
[ext_resource path="res://ufo9.png" type="Texture" id=11]
[ext_resource path="res://ufo10.png" type="Texture" id=12]
[ext_resource path="res://ufo.png" type="Texture" id=13]
[ext_resource path="res://ufo3.png" type="Texture" id=14]
[ext_resource path="res://ufo7.png" type="Texture" id=15]
[ext_resource path="res://ufo6.png" type="Texture" id=16]
[ext_resource path="res://ufo5.png" type="Texture" id=17]
[ext_resource path="res://ufo4.png" type="Texture" id=18]
[ext_resource path="res://ufo2.png" type="Texture" id=19]
[ext_resource path="res://Menu.gd" type="Script" id=20]
[ext_resource path="res://highscore.png" type="Texture" id=21]
[ext_resource path="res://RichTextLabel.gd" type="Script" id=22]
[ext_resource path="res://joystix monospace.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://score2.png" type="Texture" id=24]
[ext_resource path="res://score2.gd" type="Script" id=25]
[ext_resource path="res://Reset walls.tscn" type="PackedScene" id=26]
[ext_resource path="res://ResetStill.gd" type="Script" id=27]
[ext_resource path="res://spacebar.png" type="Texture" id=28]
[ext_resource path="res://mysteryufo3.png" type="Texture" id=29]
[ext_resource path="res://mysteryufo4.png" type="Texture" id=30]
[ext_resource path="res://mysteryufo.png" type="Texture" id=31]
[ext_resource path="res://mysteryufo2.png" type="Texture" id=32]
[ext_resource path="res://mysteryskin.gd" type="Script" id=33]
[ext_resource path="res://0mysteryufo.png" type="Texture" id=34]
[ext_resource path="res://1mysteryufo.png" type="Texture" id=35]
[ext_resource path="res://4mysteryufo.png" type="Texture" id=36]
[ext_resource path="res://2mysteryufo.png" type="Texture" id=37]
[ext_resource path="res://5mysteryufo.png" type="Texture" id=38]
[ext_resource path="res://ok symbol.png" type="Texture" id=39]
[ext_resource path="res://global2.gd" type="Script" id=40]
[ext_resource path="res://5mysteryufo5.png" type="Texture" id=41]
[ext_resource path="res://5mysteryufo3.png" type="Texture" id=42]
[ext_resource path="res://5mysteryufo2.png" type="Texture" id=43]
[ext_resource path="res://discord.png" type="Texture" id=44]
[ext_resource path="res://5mysteryufo4.png" type="Texture" id=45]
[ext_resource path="res://5mysteryufo1.png" type="Texture" id=46]
[ext_resource path="res://music Symbol.png" type="Texture" id=47]
[ext_resource path="res://music Symbol2.png" type="Texture" id=48]
[ext_resource path="res://Sprite2.gd" type="Script" id=49]
[ext_resource path="res://HighScore.gd" type="Script" id=50]
[ext_resource path="res://spacebar.gd" type="Script" id=51]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 17 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 46 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 45 ), ExtResource( 41 ) ],
"loop": true,
"name": "fall2",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 38 ), ExtResource( 38 ) ],
"loop": true,
"name": "default2",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 23 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 47 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ) ],
"loop": true,
"name": "2",
"speed": 5.0
} ]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 29 ), ExtResource( 29 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 38 ), ExtResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": false,
"name": "pressed",
"speed": 5.0
} ]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="Animation" id=14]
length = 0.658979
step = 0.329489
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.658979 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 300, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.658979
step = 0.329489
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.658979 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -250, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "pressed",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=17]
size = 150
font_data = ExtResource( 23 )

[node name="Menu" type="Node2D"]
script = ExtResource( 20 )

[node name="CameraTrackingObject" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="CameraTrackingObject"]
position = Vector2( 960, 540 )
current = true
smoothing_enabled = true

[node name="CanvasModulate" type="ParallaxBackground" parent="."]
process_priority = 5

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasModulate"]
motion_scale = Vector2( 2, 1 )
motion_mirroring = Vector2( 1920, 0 )

[node name="space" type="Sprite" parent="CanvasModulate/ParallaxLayer"]
position = Vector2( 975, 530 )
scale = Vector2( 10, 10 )
texture = ExtResource( 2 )

[node name="Player" type="KinematicBody2D" parent="CanvasModulate"]
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CanvasModulate/Player"]
polygon = PoolVector2Array( 54.5418, 5.66463, 56.4317, -15.1241, 39.1078, -30.5581, 30.2883, -47.2521, 18.3191, -58.9063, 13.5944, -63.631, -12.864, -64.261, -30.8179, -44.7322, -54.4414, -14.4941, -54.7563, 6.29459, -14.4389, 36.8477, 13.2794, 38.4226 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasModulate/Player"]
material = SubResource( 1 )
scale = Vector2( 0.08, 0.08 )
frames = SubResource( 2 )
animation = "fall2"

[node name="Reset walls" parent="CanvasModulate" instance=ExtResource( 26 )]
position = Vector2( 141, 950 )
script = ExtResource( 27 )

[node name="Label" type="Label" parent="CanvasModulate/Reset walls"]
margin_left = 94.0
margin_top = -30.0
margin_right = 758.0
margin_bottom = 213.0
custom_fonts/font = SubResource( 3 )
text = "<- Reset The
    Borders"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="tag" type="StaticBody2D" parent="CanvasModulate"]
position = Vector2( -89, -72 )

[node name="Sprite" type="Sprite" parent="CanvasModulate/tag"]
position = Vector2( 342, 138 )
scale = Vector2( 4, 4 )
texture = ExtResource( 44 )

[node name="Label" type="Label" parent="CanvasModulate/tag"]
margin_left = 382.0
margin_top = 115.0
margin_right = 1046.0
margin_bottom = 358.0
custom_fonts/font = SubResource( 4 )
text = "Eirik#6524"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="AnimatedSprite" parent="CanvasModulate/tag"]
position = Vector2( 176, 153 )
scale = Vector2( 8, 8 )
frames = SubResource( 5 )
animation = "1"
script = ExtResource( 49 )

[node name="Button3" type="Button" parent="CanvasModulate/tag/Sprite2"]
margin_left = -11.25
margin_top = -9.625
margin_right = 10.75
margin_bottom = 10.375
custom_styles/focus = SubResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mysteryskin" type="StaticBody2D" parent="CanvasModulate"]
position = Vector2( 1605, 869 )
script = ExtResource( 33 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasModulate/mysteryskin"]
position = Vector2( 119, 35 )
scale = Vector2( 16, 16 )
frames = SubResource( 7 )

[node name="Label" type="Label" parent="CanvasModulate/mysteryskin"]
margin_left = -47.0
margin_top = -182.0
margin_right = 617.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 3 )
text = "> 1000 <"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite2" type="AnimatedSprite" parent="CanvasModulate/mysteryskin"]
position = Vector2( 119, 35 )
scale = Vector2( 0.16, 0.16 )
frames = SubResource( 8 )

[node name="StaticBody2D" type="StaticBody2D" parent="CanvasModulate/mysteryskin"]
rotation = 0.869174

[node name="Label2" type="Label" parent="CanvasModulate/mysteryskin/StaticBody2D"]
margin_left = -353.942
margin_top = -110.749
margin_right = 310.058
margin_bottom = 132.251
custom_fonts/font = SubResource( 3 )
text = "Click >"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasModulate/mysteryskin"]
margin_top = -78.0
margin_right = 257.0
margin_bottom = 182.0
custom_styles/focus = SubResource( 9 )
flat = true
script = ExtResource( 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CanvasModulate/mysteryskin/Button"]
position = Vector2( 119, 141 )
scale = Vector2( 16, 16 )
texture = ExtResource( 39 )

[node name="spacebar" type="StaticBody2D" parent="CanvasModulate"]
position = Vector2( 34, 698 )
script = ExtResource( 51 )

[node name="Sprite" type="Sprite" parent="CanvasModulate/spacebar"]
position = Vector2( 275, 84 )
scale = Vector2( 8, 8 )
texture = ExtResource( 28 )

[node name="Label" type="Label" parent="CanvasModulate/spacebar"]
margin_left = 576.0
margin_top = 35.0
margin_right = 1240.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 3 )
text = "<- Spacebar
	   to jump"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasModulate"]
margin_left = 1353.0
margin_top = 249.0
margin_right = 1863.0
margin_bottom = 391.0
custom_styles/focus = SubResource( 10 )
flat = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasModulate/Button2"]
position = Vector2( 247, 71 )
scale = Vector2( 8, 8 )
frames = SubResource( 11 )
animation = "pressed"

[node name="Button" type="Button" parent="CanvasModulate"]
margin_left = 1348.0
margin_top = 59.0
margin_right = 1411.0
margin_bottom = 79.0
rect_scale = Vector2( 8, 8 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasModulate/Button"]
anims/fade = SubResource( 14 )
anims/new_scene = SubResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CanvasModulate/Button"]
position = Vector2( 31.5, 9.625 )
frames = SubResource( 16 )
animation = "pressed"

[node name="HighScore" type="StaticBody2D" parent="CanvasModulate/Button"]
position = Vector2( -168.5, 98.875 )
scale = Vector2( 0.125, 0.125 )
script = ExtResource( 50 )

[node name="Sprite" type="Sprite" parent="CanvasModulate/Button/HighScore"]
position = Vector2( 486, 133 )
scale = Vector2( 8, 8 )
texture = ExtResource( 21 )

[node name="RichTextLabel" type="Label" parent="CanvasModulate/Button/HighScore"]
margin_left = 948.0
margin_top = 23.0
margin_right = 1200.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 17 )
text = "2"
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="CanvasModulate/Button/HighScore"]
position = Vector2( 294, -28 )
scale = Vector2( 8, 8 )
texture = ExtResource( 24 )

[node name="score2" type="Label" parent="CanvasModulate/Button/HighScore"]
margin_left = 563.0
margin_top = -139.0
margin_right = 815.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 17 )
text = "0"
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="CanvasModulate/Button"]
process_priority = 10
position = Vector2( -250, 0 )
z_index = 7

[node name="ColorRect" type="ColorRect" parent="CanvasModulate/Button/StaticBody2D"]
process_priority = 11
margin_left = -197.75
margin_top = -24.375
margin_right = 82.25
margin_bottom = 137.625
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[connection signal="pressed" from="CanvasModulate/tag/Sprite2/Button3" to="CanvasModulate/mysteryskin/Button" method="_on_Button3_pressed"]
[connection signal="pressed" from="CanvasModulate/mysteryskin/Button" to="CanvasModulate/mysteryskin/Button" method="_on_Button_pressed"]
[connection signal="button_down" from="CanvasModulate/Button2" to="CanvasModulate/Button2" method="_on_Button_button_down"]
[connection signal="button_up" from="CanvasModulate/Button2" to="CanvasModulate/Button2" method="_on_Button_button_up"]
[connection signal="button_down" from="CanvasModulate/Button" to="CanvasModulate/Button" method="_on_Button_button_down"]
[connection signal="button_up" from="CanvasModulate/Button" to="CanvasModulate/Button" method="_on_Button_button_up"]
[connection signal="animation_finished" from="CanvasModulate/Button/AnimationPlayer" to="CanvasModulate/Button" method="_on_AnimationPlayer_animation_finished"]
